--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ p.new {
     font-weight: bold;
     margin-right: .25rem;
 }
+
+.main .box h1::after {
+    content: " \25C8";
+    color: #b91400;
+    font-weight: bold;
+    margin-left: .25rem;
+}
